src/test/scala/wacc/wacc_examples/invalid/semanticErr/classes/badThisUsage.wacc
# using a this outside a class

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
    int x = this.x
end
